<resources>
    <string name="app_name">CV</string>
    <string name="imageView">photo</string>
    <string name="TextView">summary</string>
    <string name="textView1">education</string>
    <string name="textView2">skills</string>
    <string name="textView3">hobbies</string>
    <string name="textView4">professional</string>
    <string name="toggleButton1">togglebutton1</string>
    <string name="toggleButton2">togglebutton2</string>
    <string name="toggleButton3">togglebutton3</string>
    <string name="toggleButton4">togglebutton4</string>
    <string name="editText1">enter_section</string>
    <string name="editText2">append_text</string>
    <string name="button">button</string>
    <string name="education">education</string>
    <string name="skills">skills</string>
    <string name="hobbies">hobbies</string>
    <string name="professional">professional</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>


</resources>
