<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yuecheng.cv.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/textView4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toRightOf="@+id/toggleButton1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.544"
        tools:ignore="HardcodedText" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/toggleButton4"
        android:onClick="tbtnFunction4"
        android:textOff="@string/textView4"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/textView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toRightOf="@+id/toggleButton1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="HardcodedText" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="111dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/toggleButton3"
        android:onClick="tbtnFunction3"
        android:textOff="@string/textView3"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toRightOf="@+id/toggleButton1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.221"
        tools:ignore="HardcodedText" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/toggleButton2"
        android:onClick="tbtnFunction2"
        android:textOff="@string/textView2"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="214dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/TextView"
        android:text="Engineering Undergraduate with training and experience with academic training at the Lehigh University."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/img1" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/toggleButton1"
        android:onClick="tbtnFunction1"
        android:textOff="@string/education"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.013"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteX="-3dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/textView1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toRightOf="@+id/toggleButton1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="176dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/editText1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton4"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/button"
        android:layout_width="95dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button"
        android:onClick="btnFunction"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toRightOf="@+id/editText1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="359dp"
        android:layout_height="92dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/editText2"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

</android.support.constraint.ConstraintLayout>
